[build-system]
requires = [
    "setuptools >= 61.0", 
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "nuvolos"
dynamic = ["version"]
description = "The Nuvolos Python library for database connectivity"
readme = "README.rst"
authors = [
    {name = "Alphacruncher", email = "support@nuvolos.cloud"}
]
license = {text = "MIT"}
urls = {homepage = "https://github.com/nuvolos-cloud/python-connector"}
requires-python = ">=3.10"
dependencies = [
    "keyring>=24.1.0",
    "snowflake-connector-python[pandas]>=4.6.0",
    "snowflake-sqlalchemy>=1.10.1",
    "cryptography>=49.0.0",
    "pyarrow>=18.1.0",
]

[tool.setuptools.packages.find]
exclude = ["tests", "venv"]

[tool.setuptools.dynamic]
version = {attr = "nuvolos.version.__version__"}

[project.optional-dependencies]
test = ["pytest"]
